--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "aws-cdk-lib": "^2.89.0",
+    "constructs": "^10.2.69",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
@@ -21,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-player": "^2.12.0",
+    "source-map-support": "^0.5.21",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
