--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && cp infra/run.sh .next/standalone",
+    "deploy": "npm run build && cdk deploy",
     "start": "next start",
     "lint": "next lint"
   },
