--- a/package.json
+++ b/package.json
@@ -5,12 +5,19 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build && cp infra/run.sh .next/standalone",
-    "deploy": "npm run build && cdk deploy",
+    "deploy": "npm run build && cdk deploy daca-website",
     "start": "next start",
     "lint": "next lint",
+    "local": "cdklocal",
+    "local:bootstrap": "cdklocal bootstrap",
+    "local:synth": "cdklocal synth daca-website-local",
+    "local:deploy": "cdklocal deploy daca-website-local",
+    "local:destroy": "cdklocal destroy daca-website-local",
     "localstack": "localstack start"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.398.0",
+    "@aws-sdk/lib-dynamodb": "^3.398.0",
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
@@ -18,14 +25,15 @@
     "aws-cdk-lib": "^2.89.0",
     "constructs": "^10.2.69",
     "eslint": "8.46.0",
-    "eslint-config-next": "13.4.12",
-    "next": "13.4.12",
+    "eslint-config-next": "^13.4.19",
+    "next": "^13.4.19",
     "postcss": "8.4.27",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-player": "^2.12.0",
     "source-map-support": "^0.5.21",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "zod": "^3.22.2"
   }
 }
