--- a/package.json
+++ b/package.json
@@ -23,14 +23,15 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.12.0",
+    "sharp": "^0.32.5",
     "source-map-support": "^0.5.21",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "zod": "^3.22.2"
   },
   "devDependencies": {
-    "sst": "^2.24.24",
     "aws-cdk-lib": "2.91.0",
-    "constructs": "10.2.69"
+    "constructs": "10.2.69",
+    "sst": "^2.24.24"
   }
 }
