--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   "devDependencies": {
     "aws-cdk-lib": "2.91.0",
     "constructs": "10.2.69",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.4",
     "sst": "^2.24.24"
   }
 }
