--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "eslint": "8.46.0",
-    "eslint-config-next": "^13.4.19",
-    "next": "^13.4.19",
+    "eslint-config-next": "^14.0.4",
+    "next": "^14.0.4",
     "postcss": "8.4.27",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -31,10 +31,10 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
-    "aws-cdk-lib": "2.91.0",
-    "constructs": "10.2.69",
+    "aws-cdk-lib": "2.110.1",
+    "constructs": "10.3.0",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
-    "sst": "^2.24.24"
+    "sst": "2.38.7"
   }
 }
